--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="page">
-      <div class="reset-container">
+      <div class="button-container">
         <button id="reset">Reset</button>
         <button id="start">Start</button>
       </div>
@@ -64,15 +64,14 @@
         <img src="images/Earth.png">
       </div>
       <div class="stats">
-        <div class="score-container">
+        <div class="number-container">
           <span>Score: </span>
           <span id="total-score">0</span>
         </div>
-        <div class="score-container">
+        <div class="number-container">
           <span>Level: </span>
           <span id="total-level">1</span>
         </div>
-
       </div>
   </body>
 </html>
