--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -63,7 +63,7 @@
       <div class="earth">
         <img src="images/Earth.png">
       </div>
-      <span class="explanation">Use arrow keys and space to defend the Earth.</span>
+      <span class="explanation">Use arrow keys and spacebar to defend the Earth.</span>
       <div class="stats">
         <div class="number-container">
           <span>Score: </span>
