--- a/name-approvals/index.html
+++ b/name-approvals/index.html
@@ -25,7 +25,7 @@
         </p><br />
         <p>
           In an effort to ensure names are being chosen that work well — both for
-          the child and socienty at large — we've created this handy tool to
+          the child and society at large — we've created this handy tool to
           help identify problematic choices.
         </p><br />
         <input type="text" id="nameField" name="your-name" placeholder="Enter name here">
